    + [TK] Add Vcs-* fields to point to Lintian's repository.
    + [RA] Update standards version to 3.7.3.

  * frontend/lintian:
    + [RA] Add critical as a recognized urgency.

  * man/lintian.1:
    + [RA] Be clearer about what files lintian takes as arguments; in
      particular, mention that source packages are checked by providing
      the .dsc file as an argument.  (Closes: #441636)

  * unpack/list-srcpkg:
    + [RA] Escape ; and newline characters in all package fields before
      writing them to the index (uncovered when someone accidentally
      appended a package description to Standards-Version).

 -- Russ Allbery <rra@debian.org>  Wed, 28 Nov 2007 20:48:12 -0800

lintian (1.23.36) unstable; urgency=low

  The "grand open change and desktop cleanup" release.

  * {checks,collection,depcheck,frontend,lib,reporting,unpack}/*:
    + [RA] Use the three-argument form of open uniformly, whether needed
      or not, to head off further quoting and whitespace interpretation
      bugs.
  
  * checks/files{.desc,}:
    + [RA] Catch .DS_Store.gz files as well.
    + [RA] Warn about ._ Mac OS X resource files in the package.
    + [RA] Add a hopefully helpful note about how cruft from other
      operating systems can show up in binary packages.
  * checks/menu-format:
    + [RA] Fix detection of commands for menu entries when the command is
      given with its full path.  (Closes: #446796)
    + [RA] Remove Actions from known desktop keys again, as I believe the
      root problem was our willingness to inspect desktop types other than
      Application (also fixed in the previous release).
    + [RA] Fix Perl flow error when skipping some desktop files.
    + [RA] Skip unknown and deprecated key warnings and encoding key
      warnings in desktop files if they were of an unknown type.

  * lib/Dep.pm:
    + [RA] Fix negative implication in some boundary cases when comparing
      two versioned relationships in the same direction.  Thanks to